--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
-        android:name=".HitFm.BaseApplication"
+        android:name=".application.BaseApplication"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,7 +22,7 @@
         tools:targetApi="31">
 
         <service
-            android:name=".HitFm.RadioService"
+            android:name=".service.RadioService"
             android:permission="android.permission.FOREGROUND_SERVICE"
             android:foregroundServiceType="mediaPlayback"
             android:enabled="true"
